# onetimechat

./: .dockerignore  Dockerfile  LICENSE  Pipfile  README.md  fly.toml  pyproject.toml  renovate.json
.github/workflows/: dockerimage.yml
front/: Dockerfile  README.md  fly.toml  package-lock.json  package.json
front/public/: index.html
front/src/: chat.css  chat.js  index.css  index.js
src/: main.py
